# polyhedron_notation

./: Cargo.toml  TODO.md
examples/bevy/: console.rs  main.rs
examples/playground/: main.rs
src/: base_polyhedra.rs  helpers.rs  lib.rs  mesh_buffers.rs  parser.rs  text_helpers.rs
src/io/: bevy.rs
src/operators/: ambo.rs  bevel.rs  canonicalize.rs  chamfer.rs  dual.rs  expand.rs  extrude.rs  gyro.rs  inset.rs  join.rs  kis.rs  medial.rs  meta.rs  mod.rs  needle.rs  openface.rs  ortho.rs  plane.rs  propellor.rs  quinto.rs  reflect.rs  snub.rs  spherize.rs  subdivide.rs  triangulate.rs  truncate.rs  whirl.rs  zip.rs
src/types/: f32.rs  f64.rs  mod.rs
tests/: equivalence_test.rs  name_test.rs  obj_test.rs  parser_test.rs  shape_test.rs
